--- a/index.html
+++ b/index.html
@@ -3,32 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List with Subtasks</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Clean Header -->
+    <div class="header">
+      <div class="header-content">
+        <img src="images/app logo.png" alt="Main Header Image" class="header-img" />
+        <div>
+          <h1 class="header-title">Organize Your Day</h1>
+          <p class="header-subtitle">Plan, Track & Complete Your Tasks</p>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
       <div class="todo-list">
-        <!-- App Header -->
-        <h2>
-          To-Do List
-          <img src="images/todo-list image.png" width="50" alt="Logo" />
-        </h2>
+        <div class="todo-header">
+          <h2>To-Do List</h2>
+          <img src="images/todo-list image.png" alt="Todo Icon" class="todo-img" />
+        </div>
 
-        <!-- Input for main tasks -->
         <div class="row">
           <input type="text" id="input-box" placeholder="Add a new task..." />
           <button onclick="addTask()">Add</button>
         </div>
 
-        <!-- Task container -->
-        <ul id="todo-items">
-          <!-- Tasks and subtasks will be injected dynamically -->
-        </ul>
+        <ul id="todo-items"></ul>
       </div>
     </div>
 
-    <!-- External JS -->
     <script src="script.js"></script>
   </body>
 </html>
