--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Clean Header -->
+    <!-- Fixed Background -->
+    <div class="bg-image"></div>
+
+    <!-- Header -->
     <div class="header">
       <div class="header-content">
-        <img src="images/app logo.png" alt="Main Header Image" class="header-img" />
+        <img src="images/header-icon.png" alt="Logo" class="header-img" />
         <div>
           <h1 class="header-title">Organize Your Day</h1>
           <p class="header-subtitle">Plan, Track & Complete Your Tasks</p>
@@ -18,11 +21,12 @@
       </div>
     </div>
 
+    <!-- Container -->
     <div class="container">
       <div class="todo-list">
         <div class="todo-header">
+          <img src="images/list-icon.png" alt="List Icon" class="todo-img" />
           <h2>To-Do List</h2>
-          <img src="images/todo-list image.png" alt="Todo Icon" class="todo-img" />
         </div>
 
         <div class="row">
