--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Fixed Background -->
+    <!-- Fixed Background (Desktop/Mobile handled in CSS) -->
     <div class="bg-image"></div>
 
     <!-- Header -->
     <div class="header">
       <div class="header-content">
-        <!-- ✅ App Logo -->
-        <img src="images/app logo.png" alt="App Logo" class="header-img" />
+        <img src="images/app logo.png" alt="Logo" class="header-img" />
         <div>
           <h1 class="header-title">Organize Your Day</h1>
           <p class="header-subtitle">Plan, Track & Complete Your Tasks</p>
@@ -26,8 +25,7 @@
     <div class="container">
       <div class="todo-list">
         <div class="todo-header">
-          <!-- ✅ To-Do List Icon -->
-          <img src="images/todo-list image.png" alt="To-Do List Icon" class="todo-img" />
+          <img src="images/todo-list image.png" alt="List Icon" class="todo-img" />
           <h2>To-Do List</h2>
         </div>
 
