--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Fixed Background (Desktop/Mobile handled in CSS) -->
-    <div class="bg-image"></div>
-
     <!-- Header -->
     <div class="header">
       <div class="header-content">
-        <img src="images/app logo.png" alt="Logo" class="header-img" />
+        <img src="images/app logo.png" alt="App Logo" class="header-img">
         <div>
           <h1 class="header-title">Organize Your Day</h1>
           <p class="header-subtitle">Plan, Track & Complete Your Tasks</p>
@@ -25,7 +22,7 @@
     <div class="container">
       <div class="todo-list">
         <div class="todo-header">
-          <img src="images/todo-list image.png" alt="List Icon" class="todo-img" />
+          <img src="images/todo-list image.png" alt="List Icon" class="todo-img">
           <h2>To-Do List</h2>
         </div>
 
